--- a/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
+++ b/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
@@ -1,23 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "n123a - Hypothesis Test.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "t_U_6S26AuYq"
+      },
       "source": [
         "<img src='https://user-images.githubusercontent.com/6457691/89746244-a6e2a200-daf3-11ea-9314-7863d544d73c.png' width = '200' align = 'right'>\n",
         "\n",
@@ -26,17 +13,11 @@
         "---\n",
         "\n",
         "# 📝 Assignment"
-      ],
-      "metadata": {
-        "id": "t_U_6S26AuYq"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 아래의 코드를 실행해 주세요. \n",
-        "!pip install scipy --upgrade"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,11 +25,10 @@
         "id": "nxI0EC-X2fXp",
         "outputId": "e98498db-f4a9-4428-be94-aa48a592d587"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (1.4.1)\n",
             "Collecting scipy\n",
@@ -65,16 +45,15 @@
             "Successfully installed scipy-1.7.3\n"
           ]
         }
+      ],
+      "source": [
+        "# 아래의 코드를 실행해 주세요. \n",
+        "!pip install scipy --upgrade"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 버전 확인 \n",
-        "import scipy\n",
-        "\n",
-        "scipy.__version__"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -83,25 +62,33 @@
         "id": "2QLRviTlNmR7",
         "outputId": "54cc574a-34df-443b-98dc-d707973e3f6c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'1.7.3'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'1.7.3'"
+            ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 버전 확인 \n",
+        "import scipy\n",
+        "\n",
+        "scipy.__version__"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tevnGzYICcze"
+      },
       "source": [
         "# 1. One-Sample T-test \n",
         "한 샘플의 평균값과 특정값(모수)을 비교하는 검정 방법입니다.\n",
@@ -121,24 +108,24 @@
         "  - scipy 라이브러리의 `.ttest_1samp()`를 사용합니다. <br>\n",
         "    https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_1samp.html\n",
         "  - 가설검정 결과의 p-value 값을 `pv1`에 저장하세요. (`.pvalue`를 사용합니다.)"
-      ],
-      "metadata": {
-        "id": "tevnGzYICcze"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다."
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "93yujFxzQ6yN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다."
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "cB3xOGTv2Q8d"
+      },
       "source": [
         "# 2. Two-Sample T-test\n",
         "두 샘플의 평균값을 비교하는 검정 방법입니다. \n",
@@ -158,24 +145,24 @@
         "    - 느티나무 (평균 느티나무 수가 왕벚나무 수보다 통계적으로 유의하게 큰 경우)\n",
         "    - 왕벚나무 (평균 왕벚나무 수가 느티나무 수보다 통계적으로 유의하게 큰 경우)\n",
         "    - 같다. (통계적으로 유의미한 차이가 없다.) "
-      ],
-      "metadata": {
-        "id": "cB3xOGTv2Q8d"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다. "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ZbWBvbFaQ-0y"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "O0uBOhE-tej3"
+      },
       "source": [
         "# 🔥 도전과제\n",
         "\n",
@@ -201,13 +188,13 @@
         "    : 모집단을 여러 그룹으로 나누고, 특정 그룹을 무작위로 선택하는 방식입니다. \n",
         "\n",
         "    <img src = 'https://i.imgur.com/m9eJ3nN.png' width=150>"
-      ],
-      "metadata": {
-        "id": "O0uBOhE-tej3"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BMjbHDYiRPBY"
+      },
       "source": [
         "## Sampling\n",
         "\n",
@@ -218,21 +205,34 @@
         "  - Stratified Random Sampling을 위한 그룹을 나누는 기준은 1-10, 11-20, ... 과 같은 방식입니다.\n",
         "\n",
         "  - Cluster Sampling에서 그룹을 나누는 기준은 5로 나눴을 때의 나머지 값입니다. (0,1,2,3,4)"
-      ],
-      "metadata": {
-        "id": "BMjbHDYiRPBY"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다. "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "s8Q6FblHTnSE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "n123a - Hypothesis Test.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
