--- a/n121-Bayes-Theorem/n121a-Bayes Theorem.ipynb
+++ b/n121-Bayes-Theorem/n121a-Bayes Theorem.ipynb
@@ -39,7 +39,10 @@
       "outputs": [],
       "source": [
         "def correct(p, m):\n",
-        "  # 코드를 작성하세요.  "
+        "  # 코드를 작성하세요.  \n",
+        "    p_right = 1*p + (1/m)*(1-p)\n",
+        "    ans = (1*p)/p_right\n",
+        "    return ans"
       ]
     },
     {
@@ -68,7 +71,10 @@
       "outputs": [],
       "source": [
         "def disease(prior, tpr, fpr):\n",
-        "  # 코드를 작성하세요."
+        "  # 코드를 작성하세요.\n",
+        "    pos = tpr*prior + fpr*(1-prior)\n",
+        "    ans = (tpr*prior)/pos\n",
+        "    return ans"
       ]
     },
     {
@@ -102,7 +108,17 @@
       },
       "outputs": [],
       "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다."
+        "# 이 곳에 답안을 작성하시기 바랍니다.\n",
+        "유죄용의자라고 확신하는 경우 = G\n",
+        "왼솝잡이인 경우 = L  이라고하면\n",
+        "P(G) = 0.6        (수사관이 유죄용의자라고 확신할 확률)\n",
+        "P(L | ~G) = 0.2   (범죄자가 아닌 일반인 중 왼손잡이일 확률)\n",
+        "문제에서 요구하는것 = 용의자가 왼손잡이라는 사실이 밝혀졌을 때 수사관이 유죄라고 확신할 확률 \n",
+        "= P(G | L)\n",
+        "= P(GL) / P(L)\n",
+        "= P(G) /( P(G)*1 + P(L|~G)*P(~G) )   ##  분모= 유죄확신하면서 왼손잡이인경우(범인이 왼손잡이라고 특정되었으므로 P(G)*1=P(G)그 자체) + 유죄확신안하면서 왼손잡이인경우 / 분자 = 왼손잡이면서 동시에 유죄확신할확률. (문제에서 0.6이라고함)\n",
+        "= 0.6 / 0.6 + 0.2 * 0.4\n",
+        "= 0.8823"
       ]
     },
     {
@@ -123,7 +139,12 @@
       },
       "outputs": [],
       "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다."
+        "# 이 곳에 답안을 작성하시기 바랍니다.\n",
+        "범죄자가 왼손잡이 특성을 가질확률 = 0.9 \n",
+        "P(G | L) \n",
+        "= P(GL) / P(L)\n",
+        "= 0.6 * 0.9 / 0.6 * 0.9 + 0.2 * 0.4   ## 위에서 범죄자가 왼손잡이라고 확정했음 = 1로계산 // 이문제에선 0.9로 적용해서 계산\n",
+        "= 0.871"
       ]
     }
   ],
