n123 1차제출(수정)

--- a/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
+++ b/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
@@ -116,11 +116,11 @@
       "execution_count": 36,
       "metadata": {
         "id": "93yujFxzQ6yN",
-        "outputId": "782c27be-ab00-4b35-ea34-90ed60f3a20c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 988
-        }
+        },
+        "outputId": "782c27be-ab00-4b35-ea34-90ed60f3a20c"
       },
       "outputs": [
         {
@@ -1075,12 +1075,12 @@
         "tree"
       ],
       "metadata": {
-        "id": "7BbXc8miz02l",
-        "outputId": "fb0debb3-5ad2-4457-d212-78b1acada2b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 863
-        }
+        },
+        "id": "7BbXc8miz02l",
+        "outputId": "fb0debb3-5ad2-4457-d212-78b1acada2b5"
       },
       "execution_count": 39,
       "outputs": [
@@ -1885,12 +1885,12 @@
         "tree"
       ],
       "metadata": {
-        "id": "4qABQ0UG3rWJ",
-        "outputId": "8128a720-fc1b-48d1-9ab1-fdb8a5a34d89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 863
-        }
+        },
+        "id": "4qABQ0UG3rWJ",
+        "outputId": "8128a720-fc1b-48d1-9ab1-fdb8a5a34d89"
       },
       "execution_count": 46,
       "outputs": [
@@ -2696,11 +2696,11 @@
         "sample10000_means"
       ],
       "metadata": {
-        "id": "Pd8M4v0OVnEV",
-        "outputId": "d0eec4bc-d066-4863-9dfb-840ac493c9ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Pd8M4v0OVnEV",
+        "outputId": "d0eec4bc-d066-4863-9dfb-840ac493c9ef"
       },
       "execution_count": 79,
       "outputs": [
@@ -2725,11 +2725,11 @@
         "pop_means  ## 모집단 평균 = 688.64 , 샘플링 평균 = 622.73 으로 같지않음 "
       ],
       "metadata": {
-        "id": "GQQ6sLeEV0oF",
-        "outputId": "70d7e074-2988-4601-c6ea-ca0932fba144",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GQQ6sLeEV0oF",
+        "outputId": "70d7e074-2988-4601-c6ea-ca0932fba144"
       },
       "execution_count": 80,
       "outputs": [
@@ -2750,24 +2750,27 @@
       "source": [
         "from scipy import stats\n",
         "sample10000_ttest = stats.ttest_1samp(sample10000, pop_means)\n",
-        "\n",
-        "print('T-value = %.2f, p-value = %.2f'%sample10000_ttest)  ## p-value = 0.79로 0.05보다 크므로 귀무가설을 채택"
+        "pv1 = sample10000_ttest.pvalue\n",
+        "pv1    ## p-value = 0.79로 0.05보다 크므로 귀무가설을 채택\n"
       ],
       "metadata": {
-        "id": "82TDIJzFX887",
-        "outputId": "f25969c5-aec0-49d4-aee8-7ab93c0fb630",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "82TDIJzFX887",
+        "outputId": "e94c865e-af52-4015-86e2-47121de4f1f3"
       },
-      "execution_count": 81,
+      "execution_count": 83,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "T-value = -0.26, p-value = 0.79\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7910849648113394"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
         }
       ]
     },
