--- a/n131 - Linear Algebra/n131a - Linear Algebra.ipynb
+++ b/n131 - Linear Algebra/n131a - Linear Algebra.ipynb
@@ -68,7 +68,16 @@
       },
       "outputs": [],
       "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다."
+        "# 이 곳에 답안을 작성하시기 바랍니다.\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "price = np.array([100, 500, 250, 50])\n",
+        "X = np.array([35, 10, 25, 40])\n",
+        "Y = np.array([0, 50, 50, 0])\n",
+        "Z = np.array([0, 0, 100, 0])\n",
+        "\n",
+        "res = [np.dot(price, person) for person in (X, Y, Z)]\n",
+        "res"
       ]
     },
     {
@@ -95,8 +104,10 @@
     {
       "cell_type": "code",
       "source": [
-        "def NormDif(v): # v = np.array()\n",
-        "    return None"
+        "def NormDif(v):   # v = np.array()\n",
+        "    L1_norm = np.sum(np.abs(v))\n",
+        "    L2_norm = np.sqrt(np.sum(np.square(v)))\n",
+        "    return np.abs(L2_norm - L1_norm)"
       ],
       "metadata": {
         "id": "kAg9kJIN2YGs"
@@ -120,7 +131,11 @@
       "cell_type": "code",
       "source": [
         "def error(x, y, type) :\n",
-        "    return None"
+        "  if type == 'MSE':\n",
+        "    err = np.sum(np.square(x-y))/len(x)\n",
+        "  else:\n",
+        "    err = np.sum(np.abs(x-y))/len(x)\n",
+        "    return err"
       ],
       "metadata": {
         "id": "RsQfuBKj2v5S"
@@ -147,7 +162,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하시기 바랍니다."
+        "# 이 곳에 답안을 작성하시기 바랍니다.\n",
+        "g = np.array([1, 3])\n",
+        "h = np.array([2, 6])\n",
+        "\n",
+        "gh_matrix = np.stack((g, h))\n",
+        "\n",
+        "np.linalg.matrix_rank(gh_matrix)   ## g와 h는 선형종속(Linearly dependent)이기때문에 Span은 2차원이 아닌 1차원(line)을 갖게된다"
       ],
       "metadata": {
         "id": "qTqyGH-MMneN"
