--- a/n412/N412_Reference_Backprop_with_Math.ipynb
+++ b/n412/N412_Reference_Backprop_with_Math.ipynb
@@ -70,44 +70,7 @@
         "---\n",
         "\n",
         "\n",
-        "<img src=\"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/etc/note2_image/bp5.png\">\n",
-        "\n",
-        "\n",
-        "by. Lee"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FmuEIo0ghoeN"
-      },
-      "source": [
-        "- **오타 수정**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "P-SsoBmRQbAN"
-      },
-      "source": [
-        "> ### $ \\partial E_1 \\over \\partial H_1 $\n",
-        "\n",
-        "$$\n",
-        "\\begin{aligned}\n",
-        "\\frac{\\partial E_1}{\\partial H_1} &= \\frac{\\partial E_1}{\\color{blue}{\\partial y_1}} \\cdot \\frac{\\color{blue}{\\partial y_1}}{\\partial H_1} \\\\\n",
-        "\\frac{\\partial E_1}{\\partial H_1} &= \\frac{\\partial E_1}{\\color{red}{\\partial Y_1}} \\cdot \\frac{\\color{red}{\\partial Y_1}}{\\color{blue}{\\partial y_1}} \\cdot \\frac{\\color{blue}{\\partial y_1}}{\\partial H_1}\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n",
-        "> ### $ \\partial E_2 \\over \\partial H_1 $\n",
-        "\n",
-        "$$\n",
-        "\\begin{aligned}\n",
-        "\\frac{\\partial E_2}{\\partial H_1} &= \\frac{\\partial E_2}{\\color{green}{\\partial y_2}} \\cdot \\frac{\\color{green}{\\partial y_2}}{\\partial H_1} \\\\\n",
-        "\\frac{\\partial E_2}{\\partial H_1} &= \\frac{\\partial E_2}{\\color{orange}{\\partial Y_2}} \\cdot \\frac{\\color{orange}{\\partial Y_2}}{\\color{green}{\\partial y_2}} \\cdot \\frac{\\color{green}{\\partial y_2}}{\\partial H_1}\n",
-        "\\end{aligned}\n",
-        "$$"
+        "<img src=\"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/etc/note2_image/bp5_new.png\">"
       ]
     }
   ]
