convolution 개념 이해를 위한 이미지 이해하기 쉽도록 추가함.

--- a/N431/N431_Convolutional_Neural_Network.ipynb
+++ b/N431/N431_Convolutional_Neural_Network.ipynb
@@ -177,26 +177,15 @@
       },
       "source": [
         "위 이미지에서 볼 수 있듯 필터가 왼쪽 위부터 차례로 슬라이딩하며 합성곱을 진행해나갑니다.<br/>\n",
-        "아래 그림은 각 위치에서 어떠한 방식으로 합성곱이 연산되는 지를 보여주고 있습니다."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Wx2YBEDfeTos"
-      },
-      "source": [
-        "<img src=\"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/etc/note431/CNN2.png\" width=500>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LnuJvghteg3k"
-      },
-      "source": [
-        "다음으로는 Convolution에 적용할 수 있는 **패딩(Padding)**과 **스트라이드(Stride)**에 대해서 알아보도록 하겠습니다.\n",
-        "\n"
+        "\n",
+        "한번에 여러개가 보이니, 보기 어려울 수 있으니 정지된 상황에서의 예시를 한번 보겠습니다. \n",
+        "\n",
+        "<img src=\"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/etc/note_image/conv_ex1-1.png\">\n",
+        "\n",
+        "같은 방식으로 9번의 연산이 이뤄지면서, 9칸이 모두 채워지는 것을 위 Gif를 통해서 확인하실 수 있습니다. <br>\n",
+        "아래 그림은 각 패치(Patch)단위로 어떠한 방식으로 합성곱이 연산되는 지를 보여주고 있습니다.\n",
+        "\n",
+        "여기까지 이해하시면, 가장 기본적인 Convolution에 대해서 이해하신 것입니다. 그림으로 이해하더라도, 실제 코드로 한번 실습해보시는 것는 추천드립니다"
       ]
     },
     {
@@ -207,6 +196,16 @@
       "metadata": {
         "id": "n5lRBJ3Cd3nO"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LnuJvghteg3k"
+      },
+      "source": [
+        "다음으로는 Convolution에 적용할 수 있는 **패딩(Padding)**과 **스트라이드(Stride)**에 대해서 알아보도록 하겠습니다.\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -970,7 +969,7 @@
       "metadata": {
         "id": "pvsxOyPuz9sD"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -991,7 +990,7 @@
       "metadata": {
         "id": "Su3Kxz-j1SdE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1014,7 @@
         },
         "outputId": "d128ea7f-7fbc-4d71-d55b-4b5b84bd28a4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1037,7 +1036,7 @@
       "metadata": {
         "id": "BwpD7xhu2BOq"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1047,7 @@
       "metadata": {
         "id": "ufUGQnqq2OnA"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1072,7 +1071,7 @@
         },
         "outputId": "53dcbbc0-c8cb-41b0-f0ba-41e3e1781835"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,7 +1108,7 @@
       "metadata": {
         "id": "8tCaq8JI0T5h"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1124,7 +1123,7 @@
         "id": "dEuLadvP38ad",
         "outputId": "416664ca-742b-4959-9c19-5d8de839c3d0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,7 +1161,7 @@
       "metadata": {
         "id": "7pC6Za0c3_Gn"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1180,7 +1179,7 @@
         "id": "zlDI_OGK4I8h",
         "outputId": "fe8222f2-89ef-4171-ac5e-4ec2a7f144f7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1241,7 +1240,7 @@
         "id": "ga3CxGi_4SRt",
         "outputId": "04ee95ad-845b-457c-d7a8-40bacf0c5a54"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
