sc23x one hot banned

--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "95a351ad",
+   "id": "5dc0a119",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ae2798",
+   "id": "16cb569b",
    "metadata": {},
    "source": [
     "---"
@@ -777,7 +777,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "a211d7a12373a64339a18eb89622150f",
+     "checksum": "22162290aa2becb9a8a4216fcd2c6592",
      "grade": false,
      "grade_id": "2-2",
      "locked": false,
@@ -801,8 +801,21 @@
     "\n",
     "def fit(X_train, y_train):\n",
     "    pipeline = None  # pipeline = make_pipeline(...)\n",
-    "    clf = None  # clf = RandomizedSearchCV(pipeline, ...)\n",
+    "    clf = None  # clf = RandomizedSearchCV(pipeline, param_distributions=dists, ...)\n",
+    "    \n",
+    "    encoder = None\n",
+    "    imputer = None\n",
+    "    model = None\n",
+    "    \n",
+    "    # YOUR CODE HERE\n",
+    "    \n",
+    "    \n",
+    "    # YOUR CODE ENDS HERE\n",
     "\n",
+    "    assert not isinstance(encoder, OneHotEncoder)\n",
+    "    pipeline = make_pipeline(encoder, imputer, model)\n",
+    "\n",
+    "    dists = {}\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
@@ -1448,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17eaf1e",
+   "id": "d7fd64fc",
    "metadata": {},
    "source": [
     "---"
@@ -1456,7 +1469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9af80e5",
+   "id": "ccc5244a",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
