add numpy import, define sigmoid function

--- a/n411/N411_PythonNN.ipynb
+++ b/n411/N411_PythonNN.ipynb
@@ -95,7 +95,7 @@
         "\n",
         "    return network"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -118,6 +118,12 @@
         "id": "eoH7O82pgUuY"
       },
       "source": [
+        "import numpy as np\n",
+        "\n",
+        "def sigmoid(x):\n",
+        "  z = 1/(1 + np.exp(-x))\n",
+        "  return z\n",
+        "\n",
         "# 순전파 함수 정의\n",
         "def forward(network, x):\n",
         "  W1, W2 = network['W1'], network['W2']\n",
@@ -130,7 +136,7 @@
         "  y = a2\n",
         "  return y"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -149,7 +155,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46cc0952-cada-4ecf-e2de-06baa2b5b1d6"
+        "outputId": "0fb63e04-8128-41e4-f8b8-8842af657aee"
       },
       "source": [
         "# 네트워크 제작\n",
@@ -162,7 +168,7 @@
         "y = forward(network, x)\n",
         "print(y)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,54 +394,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c437838-b423-4894-96fc-5b13fb7484b0"
+        "outputId": "db1660be-a102-4095-a2a9-9c62a5322458"
       },
       "source": [
         "import pandas as pd\n",
         "!pip install tensorflow-gpu==2.0.0-rc1\n",
         "import tensorflow as tf"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting tensorflow-gpu==2.0.0-rc1\n",
-            "  Downloading tensorflow_gpu-2.0.0rc1-cp37-cp37m-manylinux2010_x86_64.whl (380.5 MB)\n",
-            "\u001b[K     |████████████████████████████████| 380.5 MB 10 kB/s \n",
-            "\u001b[?25hRequirement already satisfied: google-pasta>=0.1.6 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (0.2.0)\n",
-            "Requirement already satisfied: astor>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (0.8.1)\n",
-            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (1.41.0)\n",
-            "Requirement already satisfied: absl-py>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (0.12.0)\n",
-            "Requirement already satisfied: protobuf>=3.6.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (3.17.3)\n",
-            "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (3.3.0)\n",
-            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (1.1.2)\n",
-            "Collecting tb-nightly<1.15.0a20190807,>=1.15.0a20190806\n",
-            "  Downloading tb_nightly-1.15.0a20190806-py3-none-any.whl (4.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 4.3 MB 36.7 MB/s \n",
-            "\u001b[?25hCollecting tf-estimator-nightly<1.14.0.dev2019080602,>=1.14.0.dev2019080601\n",
-            "  Downloading tf_estimator_nightly-1.14.0.dev2019080601-py2.py3-none-any.whl (501 kB)\n",
-            "\u001b[K     |████████████████████████████████| 501 kB 46.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (1.12.1)\n",
-            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (0.37.0)\n",
-            "Collecting keras-applications>=1.0.8\n",
-            "  Downloading Keras_Applications-1.0.8-py3-none-any.whl (50 kB)\n",
-            "\u001b[K     |████████████████████████████████| 50 kB 7.0 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (1.1.0)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (1.15.0)\n",
-            "Requirement already satisfied: gast>=0.2.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (0.4.0)\n",
-            "Requirement already satisfied: numpy<2.0,>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow-gpu==2.0.0-rc1) (1.19.5)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from keras-applications>=1.0.8->tensorflow-gpu==2.0.0-rc1) (3.1.0)\n",
-            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tb-nightly<1.15.0a20190807,>=1.15.0a20190806->tensorflow-gpu==2.0.0-rc1) (57.4.0)\n",
-            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tb-nightly<1.15.0a20190807,>=1.15.0a20190806->tensorflow-gpu==2.0.0-rc1) (3.3.4)\n",
-            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tb-nightly<1.15.0a20190807,>=1.15.0a20190806->tensorflow-gpu==2.0.0-rc1) (1.0.1)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tb-nightly<1.15.0a20190807,>=1.15.0a20190806->tensorflow-gpu==2.0.0-rc1) (4.8.1)\n",
-            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py->keras-applications>=1.0.8->tensorflow-gpu==2.0.0-rc1) (1.5.2)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->markdown>=2.6.8->tb-nightly<1.15.0a20190807,>=1.15.0a20190806->tensorflow-gpu==2.0.0-rc1) (3.7.4.3)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->markdown>=2.6.8->tb-nightly<1.15.0a20190807,>=1.15.0a20190806->tensorflow-gpu==2.0.0-rc1) (3.6.0)\n",
-            "Installing collected packages: tf-estimator-nightly, tb-nightly, keras-applications, tensorflow-gpu\n",
-            "Successfully installed keras-applications-1.0.8 tb-nightly-1.15.0a20190806 tensorflow-gpu-2.0.0rc1 tf-estimator-nightly-1.14.0.dev2019080601\n"
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement tensorflow-gpu==2.0.0-rc1 (from versions: 1.13.1, 1.13.2, 1.14.0, 1.15.0, 1.15.2, 1.15.3, 1.15.4, 1.15.5, 2.0.0, 2.0.1, 2.0.2, 2.0.3, 2.0.4, 2.1.0, 2.1.1, 2.1.2, 2.1.3, 2.1.4, 2.2.0, 2.2.1, 2.2.2, 2.2.3, 2.3.0, 2.3.1, 2.3.2, 2.3.3, 2.3.4, 2.4.0, 2.4.1, 2.4.2, 2.4.3, 2.4.4, 2.5.0, 2.5.1, 2.5.2, 2.5.3, 2.6.0, 2.6.1, 2.6.2, 2.6.3, 2.6.4, 2.6.5, 2.7.0rc0, 2.7.0rc1, 2.7.0, 2.7.1, 2.7.2, 2.7.3, 2.8.0rc0, 2.8.0rc1, 2.8.0, 2.8.1, 2.8.2, 2.9.0rc0, 2.9.0rc1, 2.9.0rc2, 2.9.0, 2.9.1)\u001b[0m\n",
+            "\u001b[31mERROR: No matching distribution found for tensorflow-gpu==2.0.0-rc1\u001b[0m\n"
           ]
         }
       ]
@@ -454,7 +428,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_N35cHVjy8mh"
+        "id": "_N35cHVjy8mh",
+        "outputId": "df44f25a-f9a6-4a8e-f7e4-2c6f9256a13e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 라이브러리 데이터셋을 불러옵니다. \n",
@@ -466,8 +444,18 @@
         "# Value normalization을 수행합니다. \n",
         "x_train, x_test = x_train / 255.0, x_test / 255.0"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n",
+            "11501568/11490434 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -485,14 +473,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a135e048-0987-422b-eec7-4330de36c21e"
+        "outputId": "0e3d5a2d-ab12-4dcc-f690-6885e0492e36"
       },
       "source": [
         "# 데이터의 레이블 구성 형태를 살펴봅니다.\n",
         "# 처음보는 데이터의 경우 데이터 자체를 디스플레이 하여 보면 도움이 됩니다.\n",
         "pd.unique(y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +490,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 17
         }
       ]
     },
@@ -529,7 +517,7 @@
         "  tf.keras.layers.Dense(10, activation='softmax')\n",
         "])"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -543,7 +531,7 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -553,42 +541,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b4S3QGSR_hoo",
-        "outputId": "c68cbd23-6e7d-4051-b66f-7cdd4388f8fc"
+        "outputId": "9828e560-519f-42fd-8fb8-44ad392e33ab"
       },
       "source": [
         "# 모델이 학습을 하는 부분입니다. 다음 시간에 배우게될 역전파에 대해서 이해를 하신다면 이 과정을 자세히 이해할 수 있을 것입니다. \n",
         "model.fit(x_train, y_train, epochs=5) # epoch의 수를 변화시키면 더 많이 학습하거나 적게 학습할 수 있습니다. "
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train on 60000 samples\n",
             "Epoch 1/5\n",
-            "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f210563dd40> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Index'\n",
-            "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f210563dd40> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Index'\n",
-            "60000/60000 [==============================] - 6s 106us/sample - loss: 0.3215 - accuracy: 0.9057\n",
+            "1875/1875 [==============================] - 8s 2ms/step - loss: 0.3205 - accuracy: 0.9060\n",
             "Epoch 2/5\n",
-            "60000/60000 [==============================] - 6s 96us/sample - loss: 0.1596 - accuracy: 0.9524\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1591 - accuracy: 0.9531\n",
             "Epoch 3/5\n",
-            "60000/60000 [==============================] - 6s 93us/sample - loss: 0.1219 - accuracy: 0.9640\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1225 - accuracy: 0.9635\n",
             "Epoch 4/5\n",
-            "60000/60000 [==============================] - 6s 95us/sample - loss: 0.1014 - accuracy: 0.9691\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1000 - accuracy: 0.9696\n",
             "Epoch 5/5\n",
-            "60000/60000 [==============================] - 6s 96us/sample - loss: 0.0872 - accuracy: 0.9727\n"
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0877 - accuracy: 0.9725\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f2105658d90>"
+              "<keras.callbacks.History at 0x7f8580291b50>"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 20
         }
       ]
     },
@@ -599,30 +584,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ec-MbSxv_hdY",
-        "outputId": "05315a8a-4fcd-4afb-ae6d-5f405a79ae54"
+        "outputId": "19733ed7-ab20-456f-8b27-d5b984ac5918"
       },
       "source": [
         "# 만들어진 모델을 이용하여 예측하는 부분입니다.\n",
         "model.evaluate(x_test,  y_test, verbose=2)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10000/1 - 1s - loss: 0.0427 - accuracy: 0.9755\n"
+            "313/313 - 1s - loss: 0.0840 - accuracy: 0.9742 - 683ms/epoch - 2ms/step\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.08104543879562989, 0.9755]"
+              "[0.08395463228225708, 0.9742000102996826]"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 21
         }
       ]
     },
