--- a/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
+++ b/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
@@ -33,7 +33,8 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "### 이곳에서 과제를 진행해 주세요 ### "
+        "### 이곳에서 과제를 진행해 주세요 \n",
+        "### 아직 데이터를 정하지 못했습니다"
       ],
       "outputs": [],
       "metadata": {
@@ -56,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "source": [
         "### 이곳에서 과제를 진행해 주세요 ### \n",
         "import seaborn as sns\n",
@@ -66,6 +67,81 @@
       "metadata": {
         "id": "53QsekKhpHYl"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diamonds['price'].describe()"
+      ],
+      "metadata": {
+        "id": "FuBs77Koiv2N",
+        "outputId": "f562dbe1-ff32-41d2-8841-2d6626b7f8a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count    53940.000000\n",
+              "mean      3932.799722\n",
+              "std       3989.439738\n",
+              "min        326.000000\n",
+              "25%        950.000000\n",
+              "50%       2401.000000\n",
+              "75%       5324.250000\n",
+              "max      18823.000000\n",
+              "Name: price, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diamonds['top25'] = diamonds['price'] >= 5324.25"
+      ],
+      "metadata": {
+        "id": "TDnvlQ_Si80P"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diamonds['top25'].describe()"
+      ],
+      "metadata": {
+        "id": "4sswjrPai-dT",
+        "outputId": "a2337da2-841d-4096-dde8-d990a22dab47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count     53940\n",
+              "unique        2\n",
+              "top       False\n",
+              "freq      40455\n",
+              "Name: top25, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -89,7 +165,8 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "### 이곳에서 과제를 진행해 주세요 ### "
+        "### 이곳에서 과제를 진행해 주세요 \n",
+        "### 아직 데이터를 정하지 못했습니다"
       ],
       "outputs": [],
       "metadata": {
