--- a/n411/N411_Artificial_Neural_Network.ipynb
+++ b/n411/N411_Artificial_Neural_Network.ipynb
@@ -608,7 +608,7 @@
         "- **다시 만난 XOR**\n",
         "\n",
         "위에서 풀었던 XOR GATE 문제를 다시 가져와봅시다.<br/>\n",
-        "1개의 분류기로는 XOR GATE 문제를 풀 수 있었는데요.<br/>\n",
+        "1개의 분류기로는 XOR GATE 문제를 풀 수 없었는데요.<br/>\n",
         "다음과 같이 AND, NAND, OR GATE 를 다층으로 활용하면 XOR GATE를 구할 수 있습니다."
       ]
     },
