--- a/n413/N413_For_Better_Model.ipynb
+++ b/n413/N413_For_Better_Model.ipynb
@@ -546,7 +546,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " 번째 방법은 **<font color=\"ff6f61\">조기 종료(Early Stopping)</font>**입니다.<br/>\n",
+        "세 번째 방법은 **<font color=\"ff6f61\">조기 종료(Early Stopping)</font>**입니다.<br/>\n",
         "아래 그림에서 볼 수 있는 것처럼 **학습(Train) 데이터에 대한 손실은 계속 줄어들지만<br/>\n",
         "검증(Validation) 데이터셋에 대한 손실은 증가한다면 학습을 종료**하도록 설정하는 방법입니다."
       ],
