--- a/N431/N431_Convolutional_Neural_Network.ipynb
+++ b/N431/N431_Convolutional_Neural_Network.ipynb
@@ -146,7 +146,7 @@
         "id": "2mTzSvWGiRUE"
       },
       "source": [
-        "### 헙성곱(Convolution)"
+        "### 합성곱(Convolution)"
       ]
     },
     {
