--- a/N424_Transformer/n424_Transformer.ipynb
+++ b/N424_Transformer/n424_Transformer.ipynb
@@ -123,7 +123,7 @@
         "id": "B_Nkvve_FFIG"
       },
       "source": [
-        "<img src=\"https://upload.wikimedia.org/wikipedia/en/thumb/0/0f/Transformers_Age_of_Extinction_poster.jpg/220px-Transformers_Age_of_Extinction_poster.jpg" alt=\"transformer_electric\" width=\"200\"/>"
+        "<img src=\"https://upload.wikimedia.org/wikipedia/en/thumb/0/0f/Transformers_Age_of_Extinction_poster.jpg/220px-Transformers_Age_of_Extinction_poster.jpg\" alt=\"transformer_electric\" width=\"200\"/>"
       ]
     },
     {
