--- a/N423_lanugage_modeling_with_rnn/N423_Language_Modeling_with_RNN_.ipynb
+++ b/N423_lanugage_modeling_with_rnn/N423_Language_Modeling_with_RNN_.ipynb
@@ -300,7 +300,7 @@
         "    - 어떤 순서로 오느냐에 따라서 단위의 의미가 달라지는 데이터\n",
         "    - **Non-sequential Data**\n",
         "\n",
-        "    <img src=\"https://www.researchgate.net/profile/Kent-Wittenburg/publication/303542822/figure/tbl1/AS:614026883117086@1523406825823/Tabular-data-used-in-examples.png\" width=\"280\"/> <img src=\"https://i.imgur.com/phjsn70.jpg\" width=\"500\"/>\n",
+        "    <img src=\"https://www.researchgate.net/profile/Kent-Wittenburg/publication/303542822/figure/tbl1/AS:614026883117086@1523406825823/Tabular-data-used-in-examples.jpg\" width=\"280\"/> <img src=\"https://i.imgur.com/phjsn70.jpg\" width=\"500\"/>\n",
         "\n",
         "    - **Sequential Data**\n",
         "\n",
