--- a/N423_lanugage_modeling_with_rnn/N423_Language_Modeling_with_RNN_.ipynb
+++ b/N423_lanugage_modeling_with_rnn/N423_Language_Modeling_with_RNN_.ipynb
@@ -300,7 +300,7 @@
         "    - 어떤 순서로 오느냐에 따라서 단위의 의미가 달라지는 데이터\n",
         "    - **Non-sequential Data**\n",
         "\n",
-        "    <img src=\"https://imgur.com/a/WRokWNV\" width=\"500\"/>\n",
+        "    <img src=\"https://i.imgur.com/HXlDCb9.png\" width=\"500\"/>\n",
         "\n",
         "    - **Sequential Data**\n",
         "\n",
