--- a/N423_lanugage_modeling_with_rnn/N423_Language_Modeling_with_RNN_.ipynb
+++ b/N423_lanugage_modeling_with_rnn/N423_Language_Modeling_with_RNN_.ipynb
@@ -4590,7 +4590,7 @@
         "- Attention\n",
         "    - Attention\n",
         "        - 장기 의존성(Long-term Dependency)\n",
-        "    - Query, Key, Vector\n",
+        "    - Query, Key, Value\n",
         "        - 어떤 벡터가 각 요소에 해당될까요?"
       ]
     }
