--- a/N422_distributed_representation/N422_Distributed_Representation.ipynb
+++ b/N422_distributed_representation/N422_Distributed_Representation.ipynb
@@ -368,7 +368,7 @@
         "id": "wBeUHeVGpGtp"
       },
       "source": [
-        "<img src=\"https://www.researchgate.net/profile/Nailah_Al-Madi/publication/319954363/figure/fig1/AS:552189871353858@1508663732919/CBOW-and-Skip-gram-models-architecture-1.png\" width=\"800\" />"
+        "<img src=\"https://i.imgur.com/TYSeKjX.png\" width=\"800\" />"
       ]
     },
     {
