--- a/n412/N412_Reference_Backprop_with_Math.ipynb
+++ b/n412/N412_Reference_Backprop_with_Math.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "---\n",
         "\n",
-        "<img src=\"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/etc/note2_image/bp2.png\">\n",
+        "<img src=\"https://i.imgur.com/RwLiRVI.png\">\n",
         "\n",
         "---\n",
         "\n",
