--- a/N432/N432_Reference_YOLO.ipynb
+++ b/N432/N432_Reference_YOLO.ipynb
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- Object Detection의 한 가지 방법으로 빠른 속도의 inference를 자랑하는 YOLO 모델의 기본적인 개념을 이해하고 대표 모델을 활용할 수 있다. \n",
+        "- Object Detection 모델 중 하나로 빠른 속도의 inference를 자랑하는 YOLO 모델의 기본적인 개념을 이해하고 대표 모델을 활용할 수 있다. \n",
         "- 대표 모델의 Version 별 차이를 인식할 수 있다. "
       ],
       "metadata": {
